# Minuit-haskell

./: Main.hs  Makefile  Minuit.hs  README  main.c  minuit-c.cc  minuit.cabal
src/: Main.hs  Makefile  minuit-c.h
src/Math/: Minuit.hs
